force-app/main/default/objects/Patient__c/fields/Alarm__c.field-meta.xml
<CustomField>
    <fullName>Alarm__c</fullName>
    <label>Alarm</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert: Fluid Infusion Limit Reached</fullName>
            </value>
            <value>
                <fullName>Alert: Maximum Stop Time Reached</fullName>
            </value>
            <value>
                <fullName>Alert: Rinseback Volume Reached</fullName>
            </value>
            <value>
                <fullName>Alert: Water Sample Not Taken</fullName>
            </value>
            <value>
                <fullName>Warning: Access Disconnect</fullName>
            </value>
            <value>
                <fullName>Alert: Air Detected During Prime</fullName>
            </value>
            <value>
                <fullName>Alert: Air in Blood - Arterial</fullName>
            </value>
            <value>
                <fullName>Alert: Air in Blood - Venous</fullName>
            </value>
            <value>
                <fullName>Alert: Arterial and Venous Lines Switched</fullName>
            </value>
            <value>
                <fullName>Alert: Auto-Clamp Door Open</fullName>
            </value>
            <value>
                <fullName>Alert: Batteries Need Replacement</fullName>
            </value>
            <value>
                <fullName>Alert: Blood Cassette Air Leak</fullName>
            </value>
            <value>
                <fullName>Alert: Blood Circuit Flow Restriction</fullName>
            </value>
            <value>
                <fullName>Alert: Blood Expired</fullName>
            </value>
            <value>
                <fullName>Alert: Blood Tubing Not in Disinfection Ports</fullName>
            </value>
            <value>
                <fullName>Alert: BTS Draining Failure</fullName>
            </value>
            <value>
                <fullName>Alert: BTS Install Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Check Concentrates</fullName>
            </value>
            <value>
                <fullName>Alert: Chemical Sample Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Chlorine Test Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Citric Acid Clean Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Components Require Replacement</fullName>
            </value>
            <value>
                <fullName>Alert: Concentrates Connected</fullName>
            </value>
            <value>
                <fullName>Alert: Concentrates Not Connected</fullName>
            </value>
            <value>
                <fullName>Alert: Connection Time Limit Reached</fullName>
            </value>
            <value>
                <fullName>Alert: Dialysate Expired</fullName>
            </value>
            <value>
                <fullName>Alert: Dialysate Set Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Disinfect Failure</fullName>
            </value>
            <value>
                <fullName>Alert: Doors Closed</fullName>
            </value>
            <value>
                <fullName>Alert: Doors Closed Override Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>