force-app/main/default/objects/Patient__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Worst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>