force-app/main/default/objects/Patient__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <formula>Case__r.Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email</label>
    <type>Text</type>
</CustomField>