force-app/main/default/objects/Patient__c/fields/Reposi__c.field-meta.xml
<CustomField>
    <fullName>Reposi__c</fullName>
    <label>Reposi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>